# authentication-service

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: package-auth-service.yml
dependencies/cpphttp/include/: tcplistener.hpp
include/: database.hpp  endpoints.hpp
service/: CMakeLists.txt  Dockerfile  docker-compose.yml
service/include/: endpoints.hpp
service/src/: endpoints.cpp  endpoints.hpp  main.cpp
src/: endpoints.cpp
